--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
                 <configuration>
                     <mainClass>service.Main</mainClass>
                 </configuration>
