--- a/src/main/resources/setting.properties
+++ b/src/main/resources/setting.properties
@@ -3,3 +3,6 @@ port = 8844
 monitor_range = 2
 time_before_crash = 4500
 lost_rate = 0
+local_directory = /Users/kerrzhang/Documents/Java\ Projects/localDirectory/
+sdfs_directory = /Users/kerrzhang/Documents/Java\ Projects/sdfsDirectory/
+copies = 4
