upload function from client

--- a/src/main/resources/setting.properties
+++ b/src/main/resources/setting.properties
@@ -1,5 +1,6 @@
 introducer = fa22-cs425-3801.cs.illinois.edu
-port = 8844
+port_membership = 8844
+port_sdfs = 8082
 monitor_range = 2
 time_before_crash = 4500
 lost_rate = 0
