--- a/domain/src/main/resources/setting.properties
+++ b/domain/src/main/resources/setting.properties
@@ -7,3 +7,5 @@ lost_rate = 0
 local_directory = /Users/maojunx2/Documents/Java\ Projects/localDirectory/
 sdfs_directory = /Users/maojunx2/Documents/Java\ Projects/sdfsDirectory/
 copies = 4
+read = 2
+write = 3
