--- a/domain/src/main/resources/setting.properties
+++ b/domain/src/main/resources/setting.properties
@@ -4,8 +4,8 @@ port_dns = 8088
 monitor_range = 2
 time_before_crash = 4500
 lost_rate = 0
-local_directory = /Users/maojunx2/Documents/Java\ Projects/localDirectory/
-sdfs_directory = /Users/maojunx2/Documents/Java\ Projects/sdfsDirectory/
+local_directory = /home/yiteng3/sdfs/localDirectory/
+sdfs_directory = /home/yiteng3/sdfs/sdfsDirectory/
 copies = 4
 read = 2
 write = 3
