--- a/domain/src/main/resources/setting.properties
+++ b/domain/src/main/resources/setting.properties
@@ -4,8 +4,11 @@ port_dns = 8088
 monitor_range = 2
 time_before_crash = 5000
 lost_rate = 0
-local_directory = /home/yiteng3/sdfs/localDirectory/
-sdfs_directory = /home/yiteng3/sdfs/sdfsDirectory/
+local_directory = /home/maojunx2/sdfs/localDirectory/
+sdfs_directory = /home/maojunx2/sdfs/sdfsDirectory/
+model_directory = /home/maojunx2/models/
+dataset_directory = /home/maojunx2/dataset/
 copies = 4
 read = 2
 write = 3
+backup = fa22-cs425-3802.cs.illinois.edu
