--- a/core/pom.xml
+++ b/core/pom.xml
@@ -27,5 +27,11 @@
             <artifactId>protobuf-java-util</artifactId>
             <version>3.21.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
